<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/to_edit_text_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_edit_text_id" />

    <TextView
        android:id="@+id/trip_name_text_view_id"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="Name"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/From"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_name_text_view_id"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/Date"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/Time"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/To"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/trip_name_edit_text_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="Type"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/from_edit_text_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_name_edit_text_id" />

    <EditText
        android:id="@+id/trip_time_time_picker_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="date"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_date_date_picker_id" />

    <EditText
        android:id="@+id/trip_date_date_picker_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="time"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_edit_text_id" />

    <RadioGroup
        android:id="@+id/trip_type_radio_group_button_id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/trip_time_time_picker_id">


        <RadioButton
            android:id="@+id/one_way_trip_radio_button_id"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/one_way"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat" />

        <RadioButton
            android:id="@+id/round_trip_radio_button_id"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/round"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat" />
    </RadioGroup>

    <TextView
        android:id="@+id/trip_data_dialog_header"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Enter Trip Data"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_trip_data_button_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/quantum_orange"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel_saving_trip_data_button_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/quantum_orange"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_notes_edit_text_id"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:hint="Add Notes(Optional)"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/save_trip_data_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type_radio_group_button_id" />


</androidx.constraintlayout.widget.ConstraintLayout>